feat(link): add API to update link by ID
